--- a/index.html
+++ b/index.html
@@ -5,20 +5,35 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;0,900;1,300&display=swap"
+        rel="stylesheet">
     <title>Document</title>
 </head>
 
 <body>
-    <header>
-        <nav>
-            <ul>
-                <li>Header Logo</li>
-                <li><a href="header link one"></a></li>
-                <li><a href="header link two"></a></li>
-                <li><a href="header link three"></a></li>
+    <div class="hero">
+        <header>
+            <h1>Header Logo</h1>
+            <ul class="nav">
+                <li><a href="#">header link one</a></li>
+                <li><a href="#">header link two</a></li>
+                <li><a href="#">header link three</a></li>
             </ul>
-        </nav>
-    </header>
+        </header>
+        <div class="main">
+            <div class="main-content">
+                <h2>This website is awesome</h2>
+                <p>This website has some subtext that goes here under the main title. It's a smaller font and the color
+                    is lower contrast</p>
+                <button class="btn-sign-up">Sign up</button>
+            </div>
+            <div class="main-img"><img src="https://dummyimage.com/1000x500/000/fff
+                " alt="placeholder"></div>
+        </div>
+    </div>
     <div></div>
     <div></div>
     <div></div>
