Add Action Items Section

--- a/index.html
+++ b/index.html
@@ -30,11 +30,31 @@
                     is lower contrast</p>
                 <button class="btn-sign-up">Sign up</button>
             </div>
-            <div class="main-img"><img src="https://dummyimage.com/1000x500/000/fff
+            <div class="main-img"><img src="https://dummyimage.com/1000x500/808080/
                 " alt="placeholder"></div>
         </div>
     </div>
-    <div></div>
+    <div class="section-one">
+        <h2>Some random information.</h2>
+        <div class="action-items">
+            <div>
+                <img src="https://dummyimage.com/1000x500/fff/fff" alt="">
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div>
+                <img src="https://dummyimage.com/1000x500/fff/fff" alt="">
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div>
+                <img src="https://dummyimage.com/1000x500/fff/fff" alt="">
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div>
+                <img src="https://dummyimage.com/1000x500/fff/fff" alt="">
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+        </div>
+    </div>
     <div></div>
     <div></div>
     <div></div>
