--- a/index.html
+++ b/index.html
@@ -55,8 +55,11 @@
             </div>
         </div>
     </div>
-    <div></div>
-    <div></div>
+    <div class="quote-box">
+        <p>This is an inspiring quote, or testimonial from a customer. Maybe it's just filling up space, or maybe people
+            will actually read it. Who knows? All I know is that it looks nice.</p>
+        <span>-Thor, God of Thunder</span>
+    </div>
     <div></div>
     <footer></footer>
 </body>
