Add Sign Up Section

--- a/index.html
+++ b/index.html
@@ -60,7 +60,16 @@
             will actually read it. Who knows? All I know is that it looks nice.</p>
         <span>-Thor, God of Thunder</span>
     </div>
-    <div></div>
+    <div class="section-sign-up">
+        <div class="section-action">
+            <div>
+                <h3>Call to action! It's time!</h3>
+                <p>Sign up for our product by clicking that button right over there.</p>
+            </div>
+            <button>Sign up</button>
+
+        </div>
+    </div>
     <footer></footer>
 </body>
 
