--- a/index.html
+++ b/index.html
@@ -70,7 +70,9 @@
 
         </div>
     </div>
-    <footer></footer>
+    <footer>
+        <p>Copyright &copy The Odin Project 2021</p>
+    </footer>
 </body>
 
 </html>
